[gd_scene load_steps=23 format=4 uid="uid://cxeylhmd4onja"]

[ext_resource type="Script" uid="uid://bjs2o5yjpd25j" path="res://scripts/Game.gd" id="1_qbsmt"]
[ext_resource type="Texture2D" uid="uid://cidgla3oqkmoa" path="res://art/Background/sky.png" id="2_7ua8r"]
[ext_resource type="PackedScene" uid="uid://ch3tvarymcguc" path="res://scenes/Player.tscn" id="2_cpr0p"]
[ext_resource type="Script" uid="uid://bk66l5wt8dtyh" path="res://scripts/Camera.gd" id="3_cpr0p"]
[ext_resource type="Texture2D" uid="uid://bbw3l7ns3qacb" path="res://art/Background/far-clouds.png" id="3_r7sob"]
[ext_resource type="Texture2D" uid="uid://bcnsdxg457gf4" path="res://art/Background/far-mountains.png" id="4_y5y3l"]
[ext_resource type="Script" uid="uid://du2wn2xffahsc" path="res://scripts/fmod_event_emitter_2d.gd" id="5_400sg"]
[ext_resource type="Texture2D" uid="uid://nei8g3fblyr7" path="res://art/Background/near-clouds.png" id="5_vjgi4"]
[ext_resource type="Texture2D" uid="uid://cub65x0y0ym76" path="res://art/Background/mountains.png" id="6_kyk2p"]
[ext_resource type="Script" uid="uid://b4dpsl1cx4kqs" path="res://scripts/MusicTileSpawner.gd" id="6_qy1jj"]
[ext_resource type="Texture2D" uid="uid://dxjs1s2ge2yl0" path="res://art/Background/trees.png" id="7_45i86"]
[ext_resource type="Texture2D" uid="uid://b65uswuqqayed" path="res://art/Tile.png" id="8_y5y3l"]
[ext_resource type="Script" uid="uid://ym8ird1c3jcq" path="res://scripts/ResonanceMeter.gd" id="9_mcffj"]
[ext_resource type="Texture2D" uid="uid://bnla5fxkyw8ip" path="res://art/Assets/Tiles.png" id="9_vjgi4"]
[ext_resource type="Script" uid="uid://q3elooi1s54w" path="res://scripts/MusicTileFactory.gd" id="11_3xj3m"]
[ext_resource type="Script" uid="uid://dbuqc7o0rl6x3" path="res://scripts/FeedbackManager.gd" id="15_r7sob"]
[ext_resource type="PackedScene" uid="uid://dor2oefhr7cpy" path="res://scenes/FeedbackUI.tscn" id="16_y5y3l"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vjgi4"]
texture = ExtResource("8_y5y3l")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
13:4/0 = 0
14:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kyk2p"]
texture = ExtResource("9_vjgi4")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
23:19/0 = 0
24:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
23:20/0 = 0
24:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
20:22/0 = 0
21:22/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
18:23/0 = 0
19:23/0 = 0
20:23/0 = 0
21:23/0 = 0
15:24/0 = 0
16:24/0 = 0
17:24/0 = 0
18:24/0 = 0
19:24/0 = 0

[sub_resource type="TileSet" id="TileSet_kyk2p"]
sources/0 = SubResource("TileSetAtlasSource_vjgi4")
sources/1 = SubResource("TileSetAtlasSource_kyk2p")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y5y3l"]
bg_color = Color(0.32156864, 0.32156864, 0.06666667, 1)
border_color = Color(0.03870403, 0.03870761, 0.0026020883, 1)
corner_radius_top_left = 15
corner_radius_top_right = 4
corner_radius_bottom_right = 15
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vjgi4"]
bg_color = Color(0.7608592, 0.76064736, 0.19963792, 1)
corner_radius_top_left = 15
corner_radius_bottom_right = 15

[node name="Game" type="Node2D"]
script = ExtResource("1_qbsmt")

[node name="Background" type="Node2D" parent="."]

[node name="Sky" type="Parallax2D" parent="Background"]
repeat_size = Vector2(410, 0)
autoscroll = Vector2(-1, 0)
repeat_times = 3

[node name="Sky" type="Sprite2D" parent="Background/Sky"]
texture_repeat = 2
position = Vector2(203.98114, 132.5)
scale = Vector2(1.2813678, 1.1625)
texture = ExtResource("2_7ua8r")

[node name="CloudsFar" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.2, 0.2)
repeat_size = Vector2(410, 0)
autoscroll = Vector2(-10, 0)
repeat_times = 2

[node name="CloudsFar" type="Sprite2D" parent="Background/CloudsFar"]
position = Vector2(207.07806, 137.19865)
scale = Vector2(3.2019045, 1.1400112)
texture = ExtResource("3_r7sob")

[node name="MountainsFar" type="Parallax2D" parent="Background"]
repeat_size = Vector2(410, 0)
autoscroll = Vector2(-15, 0)
repeat_times = 2

[node name="MountainsFar" type="Sprite2D" parent="Background/MountainsFar"]
position = Vector2(207.76581, 138)
scale = Vector2(2.5904274, 1.1416667)
texture = ExtResource("4_y5y3l")

[node name="CloudsClose" type="Parallax2D" parent="Background"]
repeat_size = Vector2(410, 0)
autoscroll = Vector2(-20, 0)
repeat_times = 3

[node name="CloudsClose" type="Sprite2D" parent="Background/CloudsClose"]
position = Vector2(205.358, 173.99997)
scale = Vector2(2.856139, 0.8333334)
texture = ExtResource("5_vjgi4")

[node name="MountainsClose" type="Parallax2D" parent="Background"]
repeat_size = Vector2(410, 0)
autoscroll = Vector2(-25, 0)
repeat_times = 3

[node name="MountainClose" type="Sprite2D" parent="Background/MountainsClose"]
position = Vector2(204.81964, 136.98)
scale = Vector2(1.2823774, 1.1335001)
texture = ExtResource("6_kyk2p")

[node name="Forest" type="Parallax2D" parent="Background"]
repeat_size = Vector2(410, 0)
autoscroll = Vector2(-50, 0)
repeat_times = 2

[node name="Forest" type="Sprite2D" parent="Background/Forest"]
position = Vector2(204.09082, 137.06136)
scale = Vector2(1.6909097, 1.1411555)
texture = ExtResource("7_45i86")

[node name="World" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Ground" type="Parallax2D" parent="World"]
scroll_offset = Vector2(-1049, -323)
repeat_size = Vector2(410, 0)
autoscroll = Vector2(-75, 0)
repeat_times = 2

[node name="TileMapLayer" type="TileMapLayer" parent="World/Ground"]
tile_map_data = PackedByteArray("AAAOACUAAAADAAkAAAAPACUAAAADAAkAAAAQACYAAAADAAkAAAARACYAAAADAAkAAAASACYAAAADAAkAAAATACYAAAADAAkAAAAUACcAAAADAAkAAAAVACcAAAADAAkAAAAWACcAAAADAAkAAAAXACcAAAADAAkAAAAYACcAAAADAAkAAAAZACgAAAADAAkAAAAaACgAAAADAAkAAAAbACgAAAADAAkAAAAcACgAAAADAAkAAAAdACgAAAADAAkAAAAeACgAAAADAAkAAAAfACgAAAADAAkAAAAOACYAAAADAAkAAAAOACcAAAADAAkAAAAOACgAAAADAAkAAAAOACkAAAADAAkAAAAPACYAAAADAAkAAAAPACcAAAADAAkAAAAPACgAAAADAAkAAAAPACkAAAADAAkAAAAQACUAAAADAAkAAAAQACcAAAADAAkAAAAQACgAAAADAAkAAAAQACkAAAADAAkAAAARACUAAAADAAkAAAARACcAAAADAAkAAAARACgAAAADAAkAAAARACkAAAADAAkAAAASACUAAAADAAkAAAASACcAAAADAAkAAAASACgAAAADAAkAAAASACkAAAADAAkAAAATACUAAAADAAkAAAATACcAAAADAAkAAAATACgAAAADAAkAAAATACkAAAADAAkAAAAUACUAAAADAAkAAAAUACYAAAADAAkAAAAUACgAAAADAAkAAAAUACkAAAADAAkAAAAVACUAAAADAAkAAAAVACYAAAADAAkAAAAVACgAAAADAAkAAAAVACkAAAADAAkAAAAWACUAAAADAAkAAAAWACYAAAADAAkAAAAWACgAAAADAAkAAAAWACkAAAADAAkAAAAXACUAAAADAAkAAAAXACYAAAADAAkAAAAXACgAAAADAAkAAAAXACkAAAADAAkAAAAYACUAAAADAAkAAAAYACYAAAADAAkAAAAYACgAAAADAAkAAAAYACkAAAADAAkAAAAZACUAAAADAAkAAAAZACYAAAADAAkAAAAZACcAAAADAAkAAAAZACkAAAADAAkAAAAaACUAAAADAAkAAAAaACYAAAADAAkAAAAaACcAAAADAAkAAAAaACkAAAADAAkAAAAbACUAAAADAAkAAAAbACYAAAADAAkAAAAbACcAAAADAAkAAAAbACkAAAADAAkAAAAcACUAAAADAAkAAAAcACYAAAADAAkAAAAcACcAAAADAAkAAAAcACkAAAADAAkAAAAdACUAAAADAAkAAAAdACYAAAADAAkAAAAdACcAAAADAAkAAAAdACkAAAADAAkAAAAeACUAAAADAAkAAAAeACYAAAADAAkAAAAeACcAAAADAAkAAAAeACkAAAADAAkAAAAfACUAAAADAAkAAAAfACYAAAADAAkAAAAfACcAAAADAAkAAAAfACkAAAADAAkAAAAgACUAAAADAAkAAAAgACYAAAADAAkAAAAgACcAAAADAAkAAAAgACgAAAADAAkAAAAgACkAAAADAAkAAAAhACUAAAADAAkAAAAhACYAAAADAAkAAAAhACcAAAADAAkAAAAhACgAAAADAAkAAAAhACkAAAADAAkAAAAiACUAAAADAAkAAAAiACYAAAADAAkAAAAiACcAAAADAAkAAAAiACgAAAADAAkAAAAiACkAAAADAAkAAAAjACUAAAADAAkAAAAjACYAAAADAAkAAAAjACcAAAADAAkAAAAjACgAAAADAAkAAAAjACkAAAADAAkAAAAkACUAAAADAAkAAAAkACYAAAADAAkAAAAkACcAAAADAAkAAAAkACgAAAADAAkAAAAkACkAAAADAAkAAAAlACUAAAADAAkAAAAlACYAAAADAAkAAAAlACcAAAADAAkAAAAlACgAAAADAAkAAAAlACkAAAADAAkAAAAmACUAAAADAAkAAAAmACYAAAADAAkAAAAmACcAAAADAAkAAAAmACgAAAADAAkAAAAmACkAAAADAAkAAAAnACUAAAADAAkAAAAnACYAAAADAAkAAAAnACcAAAADAAkAAAAnACgAAAADAAkAAAAnACkAAAADAAkAAAAoACUAAAADAAkAAAAoACYAAAADAAkAAAAoACcAAAADAAkAAAAoACgAAAADAAkAAAAoACkAAAADAAkAAAApACUAAAADAAkAAAApACYAAAADAAkAAAApACcAAAADAAkAAAApACgAAAADAAkAAAApACkAAAADAAkAAAAqACUAAAADAAkAAAAqACYAAAADAAkAAAAqACcAAAADAAkAAAAqACgAAAADAAkAAAAqACkAAAADAAkAAAA=")
tile_set = SubResource("TileSet_kyk2p")

[node name="Player" parent="World" instance=ExtResource("2_cpr0p")]
unique_name_in_owner = true
metadata/_edit_group_ = true

[node name="FmodBankLoader" type="FmodBankLoader" parent="."]
bank_paths = ["res://music/fmod/Mobile/Master.strings.bank", "res://music/fmod/Mobile/Master.bank"]

[node name="FmodEventEmitter2D" type="FmodEventEmitter2D" parent="."]
event_name = "event:/MainSong"
event_guid = "{5e3dc658-32f6-4b1a-a050-8fb1eac60b93}"
fmod_parameters/Stutter/id = -5799696294855748829
fmod_parameters/Stutter = 0.0
fmod_parameters/Stutter/variant_type = 3
fmod_parameters/PitchShift/id = -5157426960461512288
fmod_parameters/PitchShift = 0.0
fmod_parameters/PitchShift/variant_type = 3
fmod_parameters/LowPassCutoff/id = 7924135127220073405
fmod_parameters/LowPassCutoff = 500.0
fmod_parameters/LowPassCutoff/variant_type = 3
fmod_parameters/Resonance/id = 9094596799579556167
fmod_parameters/Resonance = 0.0
fmod_parameters/Resonance/variant_type = 3
fmod_parameters/ReverbDecay/id = -2385073031700651145
fmod_parameters/ReverbDecay = 0.2
fmod_parameters/ReverbDecay/variant_type = 3
script = ExtResource("5_400sg")

[node name="MusicTileFactory" type="Node2D" parent="."]
script = ExtResource("11_3xj3m")

[node name="MusicTileSpawner" type="Node" parent="." node_paths=PackedStringArray("tile_factory")]
script = ExtResource("6_qy1jj")
tile_factory = NodePath("../MusicTileFactory")
player_path = NodePath("../World/Player")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(23, 272)
offset = Vector2(97, -80)
limit_smoothed = true
position_smoothing_enabled = true
script = ExtResource("3_cpr0p")

[node name="FeedbackManager" type="CanvasLayer" parent="."]
script = ExtResource("15_r7sob")
feedback_scene = ExtResource("16_y5y3l")

[node name="ResonanceBar" type="ProgressBar" parent="FeedbackManager"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 8.0
offset_right = -121.0
offset_bottom = 18.0
grow_horizontal = 0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.9490196, 0.9490196, 0.20392157, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_y5y3l")
theme_override_styles/fill = SubResource("StyleBoxFlat_vjgi4")
value = 60.0
show_percentage = false
script = ExtResource("9_mcffj")

[connection signal="timeline_beat" from="FmodEventEmitter2D" to="." method="_on_fmod_event_emitter_2d_timeline_beat"]
[connection signal="timeline_marker" from="FmodEventEmitter2D" to="MusicTileSpawner" method="_on_fmod_event_emitter_2d_timeline_marker"]
